--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "@taquito/taquito": "^15.0.0",
         "@taquito/utils": "^15.0.0",
         "dotenv": "^16.0.3",
+        "node-fetch": "^3.3.0",
         "path": "^0.12.7",
         "ts-node": "^10.9.1",
         "typescript": "^4.9.4"
